--- a/src/app/settings/index.html
+++ b/src/app/settings/index.html
@@ -1,22 +1,13 @@
 <template>
+    <require from="../shared/components/header-title"></require>
+    <require from="../shared/components/back-button"></require>
+    <require from="../shared/components/sub-menu.html"></require>
+
     <div class="primary-dark" style="color: white;">
         <div class="ui container" style="position: relative; padding: 3em 0 0 0;">
-            <div class="ui inverted secondary pointing menu">
-                <a route-href="route: alerts;" class="item" style="padding-left: 0;">
-                    <h2 style="font-weight: 200;" i18n="[append]alert.title">
-                        <div class="basic circular ui icon inverted button">
-                            <i class="large inverted chevron left icon"></i>
-                        </div>
-                    </h2>
-                </a>
-            </div>
-            <h1 class="ui header" style="color: white; font-size: 3rem; font-weight: 200;" i18n="settings.title">Settings</h1>
-
-            <div class="ui inverted secondary pointing text menu" style="margin-bottom: 0;">
-                <div repeat.for="row of router.navigation" class="${row.isActive ? 'active' : ''} item">
-                    <a style="color: inherit;" href.bind="row.href">${row.title}</a>
-                </div>
-            </div>
+            <back-button></back-button>
+            <header-title text="settings.title"></header-title>
+            <sub-menu routes.one-time="router.navigation"></sub-menu>
         </div>
     </div>
 
