Added a new footer menu for the list flow

--- a/src/app/alerts/components/alert-card.html
+++ b/src/app/alerts/components/alert-card.html
@@ -1,4 +1,4 @@
-<template bindable="alert">
+<template>
     <div class="alert-card ${alert.isActive ? 'green' : 'inactive'} card">
         <div class="content">
             <slot name="top-action"></slot>
