--- a/src/app/alerts/components/alerts-list.html
+++ b/src/app/alerts/components/alerts-list.html
@@ -1,5 +1,5 @@
 <template>
-    <require from="./alert-card.html"></require>
+    <require from="./alert-card"></require>
 
     <div class="ui one column grid mobile only">
         <div class="column">
@@ -25,9 +25,12 @@
                 </a>
                 <alert-card repeat.for="alert of alerts | sort:'title'" alert.one-time="alert" style="border-radius: 2px;" containerless>
                     <div slot="top-action">
-                        <i class="right floated red circular button remove icon" click.delegate="confirmDeleteAlert(alert)"
-                            data-analytics-category="Alerts"
-                            data-analytics-action="remove"></i>
+                        <i class="right floated circular button">
+                            <div class="ui fitted radio checkbox">
+                                <input type="checkbox" class="hidden" model.bind="alert" checked.bind="selectedAlerts">
+                                <label></label>
+                            </div>
+                        </i>
                     </div>
                     <div slot="bottom-action">
                         <a class="right floated primary-action-hover" click.delegate="activate({ alert: alert })" hide.bind="alert.isActive"
@@ -51,6 +54,4 @@
             </div>
         </div>
     </div>
-
-    <confirmation-modal view-model.ref="confirmationModal" message="alerts.deleteConfirmation"></confirmation-modal>
 </template>
