--- a/src/app/alerts/index.html
+++ b/src/app/alerts/index.html
@@ -31,41 +31,37 @@
                 activate.call="activateAlert(alert)">
             </alerts-list>
 
-            <div class="ui bottom fixed labeled icon borderless inverted menu" style="justify-content: center;" show.bind="selectedAlerts.length">
-                <a class="item" click.delegate="clearSelection()" style="font-size: 0.8em;">
+            <div class="ui bottom fixed labeled icon borderless secondary inverted primary-dark menu" style="justify-content: center;" show.bind="selectedAlerts.length">
+                <a class="item" click.delegate="clearSelection()" style="font-size: 0.8em;" i18n="[append]alerts.actions.clearSelection">
                     <i class="remove icon"></i>
-                    Clear selection
                 </a>
-                <a class="item" show.bind="!currentList" click.delegate="showModal(createListModal)" style="font-size: 0.8em;"
+                <a class="item" show.bind="!currentList" click.delegate="showModal(createListModal)" style="font-size: 0.8em;" i18n="[append]alerts.actions.createList"
                     data-analytics-category="List"
                     data-analytics-action="create"
                     data-analytics-label="footer">
                     <i class="list icon"></i>
-                    Create list
                 </a>
-                <div class="ui dropdown item" show.bind="!currentList" style="font-size: 0.8em;"
+                <div class="ui dropdown link item" show.bind="!currentList" style="font-size: 0.8em;"
                     data-analytics-category="List"
                     data-analytics-action="add"
                     data-analytics-label="footer">
-                    <i class="indent icon"></i>
-                    <div class="text">Add to list</div>
+                    <i class="outdent icon"></i>
+                    <div class="text" i18n="alerts.actions.addToList">Add to list</div>
                     <div class="menu">
                         <div repeat.for="list of lists | sort:'name'" class="item" click.delegate="addToList(selectedAlerts, list)">${list.name}</div>
                     </div>
                 </div>
-                <a class="item" show.bind="currentList" click.delegate="removeFromList(selectedAlerts)" style="font-size: 0.8em;"
+                <a class="item" show.bind="currentList" click.delegate="removeFromList(selectedAlerts)" style="font-size: 0.8em;" i18n="[append]alerts.actions.removeFromList"
                     data-analytics-category="List"
                     data-analytics-action="remove"
                     data-analytics-label="footer">
-                    <i class="outdent icon"></i>
-                    Remove from list
+                    <i class="indent icon"></i>
                 </a>
-                <a class="item" click.delegate="confirmDeleteAlert(selectedAlerts)" style="font-size: 0.8em;"
+                <a class="item" click.delegate="confirmDeleteAlert(selectedAlerts)" style="font-size: 0.8em;" i18n="[append]alerts.actions.deleteAlert"
                     data-analytics-category="Alerts"
                     data-analytics-action="delete"
                     data-analytics-label="footer">
                     <i class="archive icon"></i>
-                    Delete
                 </a>
             </div>
         </div>
