--- a/static/styles.css
+++ b/static/styles.css
@@ -189,6 +189,20 @@ section {
 .pricewise .alert-card {
     border-radius: 2px;
 }
+.pricewise .alert-card .ui.radio.checkbox {
+    min-width: 24px;
+    min-height: 24px;
+}
+.pricewise .alert-card .ui.radio.checkbox .box:before,
+.pricewise .alert-card .ui.radio.checkbox label:before {
+    width: 24px;
+    height: 24px;
+}
+.pricewise .alert-card .ui.radio.checkbox .box:after,
+.pricewise .alert-card .ui.radio.checkbox label:after {
+    width: 24px;
+    height: 24px;
+}
 
 .pricewise .ui.cards > .green.card,
 .pricewise .ui.green.card,
@@ -326,15 +340,10 @@ section {
 .pricewise .ui.secondary.inverted.menu a.item:hover {
     color: #fff!important;
 }
-
-.pricewise .ui.menu .dropdown.item .menu {
-    background: rgba(255, 255, 255, 0.1);
-}
-.pricewise .ui.menu .ui.dropdown .menu>.item {
-    opacity: 0.7;
-}
-.pricewise .ui.menu .ui.dropdown .menu>.item:hover {
-    opacity: 1;
+.pricewise .ui.secondary.inverted.menu .ui.dropdown .item:hover,
+.pricewise .ui.secondary.inverted.menu .ui.dropdown .link.item:hover,
+.pricewise .ui.secondary.inverted.menu .ui.dropdown a.item:hover {
+    color: initial!important;
 }
 
 .pricewise .footer {
