--- a/static/styles.css
+++ b/static/styles.css
@@ -449,6 +449,13 @@ section {
     color: inherit;
 }
 
+.pricewise .actions-menu {
+    justify-content: center;
+}
+.pricewise .actions-menu .item {
+    font-size: 0.8em;
+}
+
 /* Mobile */
 @media only screen and (max-width: 767px) {
     [class*="mobile hidden"],
