Some adjustments on the lists

--- a/src/app/shared/components/actions-menu-action.html
+++ b/src/app/shared/components/actions-menu-action.html
@@ -1,8 +1,9 @@
 <template bindable="action, text, icon, analyticsCategory, analyticsAction">
-    <a class="item" click.delegate="action()" i18n="[append]${text}"
+    <a class="item" click.delegate="action()"
         data-analytics-category.one-time="analyticsCategory"
         data-analytics-action.one-time="analyticsAction"
         data-analytics-label="footer">
         <i show.bind="icon" class="${icon} icon"></i>
+        ${text & t}
     </a>
 </template>
