--- a/src/app/alerts/index.html
+++ b/src/app/alerts/index.html
@@ -19,7 +19,7 @@
 
     <div class="primary-light" style="padding-bottom: 2em;">
         <div class="ui container">
-            <list-menu 
+            <list-menu
                 lists.one-way="lists"
                 selected-list.two-way="currentListFilter"
                 delete.call="deleteList(list)">
@@ -51,7 +51,7 @@
                 <actions-menu-action text="alerts.actions.removeFromList" icon="indent" action.call="removeFromList(selectedAlerts)" show.bind="currentList"
                     analytics-category="List"
                     analytics-action="remove"></actions-menu-action>
-                <actions-menu-action text="alerts.actions.deleteAlert" icon="indent" action.call="confirmDeleteAlert(selectedAlerts)" show.bind="currentList"
+                <actions-menu-action text="alerts.actions.deleteAlert" icon="trash" action.call="confirmDeleteAlert(selectedAlerts)"
                     analytics-category="List"
                     analytics-action="delete"></actions-menu-action>
             </actions-menu>
