--- a/src/app/alerts/index.html
+++ b/src/app/alerts/index.html
@@ -20,6 +20,7 @@
     <div class="primary-light" style="padding-bottom: 2em;">
         <div class="ui container">
             <list-menu
+                show.bind="lists.length"
                 lists.one-way="lists"
                 selected-list.two-way="currentList"
                 delete.call="deleteList(list)">
@@ -32,6 +33,20 @@
                 add.call="showModal(createAlertModal)"
                 activate.call="activateAlert(alert)">
             </alerts-list>
+
+            <div hide.bind="allAlerts.length" style="padding: 6em 0 4em 0;">
+                <p style="text-align: center;" i18n="alerts.noAlert">You are not watching any products right now.</p>
+                <p style="text-align: center;" i18n="alerts.getStarted">Get started!</p>
+                <div style="text-align: center;">
+                    <div class="ui primary primary-action button" click.delegate="showModal(createAlertModal)"
+                        i18n="[append]alerts.createAlert"
+                        data-analytics-category="Alerts"
+                        data-analytics-action="add"
+                        data-analytics-label="overlay">
+                        <i class="plus icon"></i>
+                    </div>
+                </div>
+            </div>
 
             <actions-menu show.bind="selectedAlerts.length">
                 <actions-menu-action text="alerts.actions.clearSelection" icon="remove" action.call="clearSelection()"></actions-menu-action>
@@ -55,22 +70,6 @@
                     analytics-category="List"
                     analytics-action="delete"></actions-menu-action>
             </actions-menu>
-        </div>
-
-        <div class="ui overlay" hide.bind="allAlerts.length">
-            <div style="width: 100%; position: absolute; top: 50%; left: 0;">
-                <p style="text-align: center;" i18n="alerts.noAlert">You are not watching any products right now.</p>
-                <p style="text-align: center;" i18n="alerts.getStarted">Get started!</p>
-                <div style="text-align: center;">
-                    <div class="ui primary primary-action button" click.delegate="showModal(addSourceModal)"
-                        i18n="[append]alerts.createAlert"
-                        data-analytics-category="Alerts"
-                        data-analytics-action="add"
-                        data-analytics-label="overlay">
-                        <i class="plus icon"></i>
-                    </div>
-                </div>
-            </div>
         </div>
 
         <loader text="alerts.working" is-active.one-way="isUpdating"></loader>
