--- a/src/app/alerts/components/list-menu.html
+++ b/src/app/alerts/components/list-menu.html
@@ -1,7 +1,7 @@
 <template>
     <require from="./list-label"></require>
 
-    <div class="ui text menu">
+    <div class="ui text menu" style="margin-top: 0; padding-top: 1em;">
         <div class="item" if.bind="add">
             <a class="ui red large label" click.delegate="add()" i18n="[append]lists.createButton">
                 <i class="plus icon"></i>
