--- a/src/app/settings/index.html
+++ b/src/app/settings/index.html
@@ -6,7 +6,7 @@
     <div class="primary-dark" style="color: white;">
         <div class="ui container" style="position: relative; padding: 3em 0 0 0;">
             <back-button></back-button>
-            <header-title text="settings.title"></header-title>
+            <header-title>${'settings.title' & t}</header-title>
             <sub-menu routes.one-time="router.navigation"></sub-menu>
         </div>
     </div>
