--- a/src/shared/components/authenticated-nav-bar.html
+++ b/src/shared/components/authenticated-nav-bar.html
@@ -2,7 +2,7 @@
     <div class="primary-dark" style="color: white;">
         <div class="ui container" style="position: relative;">
             <div class="ui inverted secondary pointing menu" style="padding: 1em 0;">
-                <a route-href="route: user" class="item">
+                <a route-href="route: alerts" class="item">
                     <img src="/images/pricewise-logo.png">
                     <span class="mobile hidden" style="padding-left: 1em;">PriceWise</span>
                 </a>
