--- a/src/app/shared/components/header-title.html
+++ b/src/app/shared/components/header-title.html
@@ -1,3 +1,3 @@
 <template>
-    <h1 class="ui header header-title">${text & t}</h1>
+    <h1 class="ui header header-title"><slot></slot></h1>
 </template>
